Bug 1714762 - patch 1 - Don't use asynchronous font fallback in the parent process, to avoid glitches in UI rendering. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D117666