gfx/thebes/gfxTextRun.cpp
@@ -2936,7 +2936,8 @@ gfxFont* gfxFontGroup::FindFallbackFaceForChar(
   // If async fallback is enabled, and the family isn't fully initialized yet,
   // just start the async cmap loading and return.
   if (!aFamily->IsFullyInitialized() &&
-      StaticPrefs::gfx_font_rendering_fallback_async()) {
+      StaticPrefs::gfx_font_rendering_fallback_async() &&
+      !XRE_IsParentProcess()) {
     pfl->StartCmapLoadingFromFamily(aFamily - list->Families());
     return nullptr;
   }
